--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <footer>
-        <div class="credits">Made with <span class="heart"> ❤ </span>by Ashwani</div>
+        <div class="credits">Made with <span class="heart"> ❤ </span>by Sahil</div>
     </footer>
 
      <!-- Credits -->
